# Flux

./: .coverage  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci_test.yml
backend/: chunker.py  embeddings.py  ingestion.py  llm.py  main.py  retrieval.py  vector_store.py
data/index/: faiss.idx  metadata.jsonl
frontend/: app.py
tests/: test_chunker.py  test_embeddings.py  test_ingestion.py  test_retrieval.py  test_vector_store.py
