[project]
name = "college-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "nltk>=3.9.1",
    "pymupdf>=1.26.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "sentence-transformers>=5.1.0",
    "sentencepiece>=0.2.0",
    "streamlit>=1.48.0",
    "uvicorn>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
